# mockoidc

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  artifacthub-repo.yml  claims_generator.py  config.py  index.yaml  jwks_service.py  main.py  models.py  pyproject.toml  token_service.py
.github/workflows/: docker-build.yml  helm-release.yml  tests.yml
.helm/: Chart.yaml  README.md  values.yaml
.helm/examples/: namespace.yaml  network-policy.yaml  values-local.yaml
.helm/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
charts/mockoidc/: Chart.yaml  values.yaml
charts/mockoidc/examples/: README.md  network-policy.yaml  values-local.yaml
charts/mockoidc/templates/: configmap.yaml  hpa.yaml  serviceaccount.yaml
demo/: callback_server.py
tests/: README.md  __init__.py  conftest.py  test_claims_generator.py  test_config.py  test_endpoints.py  test_jwks_service.py  test_models.py
